# infrastructure-arms

./: README.md
arm_control/: CMakeLists.txt  package.xml
arm_control/src/: door_path_planner_gen_3.py  door_trial_path_planner_kinova_jayco_2.py  door_trial_path_planner_kinova_jayco_2_combined.py  drawer_trial_path_planner_kinova_jayco_2.py  example_arm_controller.py  general_path_planner_kinova.py  old_door_trial_path_planner_kinova_jayco_2.py  old_door_trial_path_planner_kinova_jayco_2_combined.py  old_example_arm_controller.py  old_general_path_planner_kinova.py  test.py
arm_control/src/door/: door_env_base.json  handle.json  knob.json
arm_control/src/drawer/: drawer_env_base.json  drawer_parameters.json  drawer_with_handle.json  drawer_with_knob.json  handle.json  knob.json
arm_control/src/joint_angles/: door.json  drawer.json  notes.txt  testbed_example_path.csv
example_paths/: drawer_path.csv
grasp_dataset_test/dataset_test/: CMakeLists.txt  package.xml
kinova_description/: CMakeLists.txt
kinova_description/launch/: drawer_spawn.launch
kinova_description/meshes/: drawer_Link.STL  frame_link.STL
kinova_description/src/: drawer_updater.py
kinova_description/urdf/: drawer.xacro  drawer_model.xacro  drawer_visualization.xacro  j2s7s300.xacro  j2s7s300_standalone.xacro
kinova_driver/src/: kinova_tool_pose_action.cpp
kinova_jayco/kinova_demo/: setup.py
kinova_jayco/kinova_msgs/: CMakeLists.txt  package.xml
kinova_jayco/revised_trajectory/: CMakeLists.txt  package.xml
kinova_jayco_2/kinova_description/: package.xml
(+47 files in other folders)
